# LetterPuzzle

./: LICENSE  README.md
C#/: LetterBudget.cs  LetterPuzzle.csproj  LetterPuzzle.sln  Program.cs  Rules.cs  dicLogic.cs
C#/Properties/: AssemblyInfo.cs
Delphi 11/: .gitignore  LetterPuzzle.dpr  LetterPuzzle.dproj  uAffLogic.pas  uDicLogic.pas  uLetterPuzzle.pas
Java/src/de/letterpuzzle/: LetterBudget.java  Main.java
Java/src/de/letterpuzzle/diclogic/: Filter.java  WordList.java
Java/src/de/letterpuzzle/rules/: Rule.java  RuleSet.java  Rules.java
cpp/: CMakeLists.txt  dicLogic.cpp  dicLogic.hpp  letterPuzzle.cpp  letterPuzzle.hpp  main.cpp  rules.cpp  rules.hpp  utils.cpp  utils.hpp
hunspell/: de_DE_frami_mod.aff
node.js/: .gitignore  affLogic.ts  dicLogic.ts  letterPuzzle.ts  package-lock.json  package.json  tsconfig.json
